# Forests

./: .gitignore  .isort.cfg  .travis.yml  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
forests/: __init__.py  tree_classes.py
forests/tests/: test_forests.py
tests/: conftest.py  test_tree_classes.py
tests/TestTreeClasses/: test_types.py
tests/fixtures/: base.py  tree_classes.py  tree_node_parameter_data.py
woodland/: __init__.py  base.py  tree_classes.py
