[tool.poetry]
name = "forests"
version = "0.1.0"
description = ""
authors = ["JHowell45 <jhowell45@googlemail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
autopep8 = "^1.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pep8 = "^1.7"
flake8 = "^3.5"
pylint = "^2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
